@@ -297,6 +297,7 @@ Localization
         #LOC_BDArmory_Settings_SpawnConcurrentVessels = Concurrent Vessels (CS)
         #LOC_BDArmory_Settings_SpawnLivesPerVessel = Lives Per Vessel (CS)
         #LOC_BDArmory_Settings_SpawnDumpLogsEverySpawn = Dump Logs Every Spawn (CS)
+        #LOC_BDArmory_Settings_CSFollowsCentroid = Spawn Point Follows Centroid (CS)
         #LOC_BDArmory_Settings_SpawnContinueSingleSpawning = Continuous Single Spawn (S)
         #LOC_BDArmory_Settings_SpawnRandomOrder = Random Spawn Order (S)
         #LOC_BDArmory_Settings_SpawnStartCompetitionAutomatically = Start Competition Automatically
