@@ -40,6 +40,8 @@
 		- Fix radar missiles not locking and firing until well within their max engagement range.
 		- Add new dragArea configuration variable for missiles to set reference area for drag independently from the lift area. If not set, this defaults to the liftArea setting in the missile configuration file.
 		- EMP warheads only detonate when armed and no longer do additional damage.
+- Competition:
+	- Add an option for the continuous spawn central point to follow the centroid of surviving craft (biased back towards the original spawn point).
 
 v1.6.9.0
 IMPROVEMENTS / FIXES
